// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatToRemoteProposal > returns bridged remote proposal in the correct format 1`] = `
{
  "bridgedDate": 2022-06-29T10:43:23.000Z,
  "canceledDate": undefined,
  "canceledTxHash": undefined,
  "chainId": 11155111,
  "executedDate": 2024-07-09T10:19:23.000Z,
  "executedTxHash": "0x544c7a7eaa39193348b5907232f9cee66c8aa6f609200d03792289b40487d164",
  "executionEtaDate": 2024-07-02T15:56:59.000Z,
  "expiredDate": undefined,
  "failedDate": undefined,
  "failedTxHash": undefined,
  "proposalActions": [],
  "proposalId": 1,
  "queuedDate": 2024-06-30T15:56:59.000Z,
  "queuedTxHash": "0x3f4f7a17f7ed78c0c3620e61391aeab8b0a22b2438c7c8b65396e3d52c617d1f",
  "remoteProposalId": 4,
  "state": 0,
}
`;

exports[`formatToRemoteProposal > returns canceled remote proposal in the correct format 1`] = `
{
  "bridgedDate": 2022-06-29T10:43:23.000Z,
  "canceledDate": 2024-07-09T10:19:23.000Z,
  "canceledTxHash": "0x544c7a7eaa39193348b5907232f9cee66c8aa6f609200d03792289b40487d164",
  "chainId": 11155111,
  "executedDate": undefined,
  "executedTxHash": undefined,
  "executionEtaDate": 2024-07-02T15:56:59.000Z,
  "expiredDate": undefined,
  "failedDate": undefined,
  "failedTxHash": undefined,
  "proposalActions": [],
  "proposalId": 1,
  "queuedDate": 2024-06-30T15:56:59.000Z,
  "queuedTxHash": "0x3f4f7a17f7ed78c0c3620e61391aeab8b0a22b2438c7c8b65396e3d52c617d1f",
  "remoteProposalId": 4,
  "state": 0,
}
`;

exports[`formatToRemoteProposal > returns expired remote proposal in the correct format 1`] = `
{
  "bridgedDate": undefined,
  "canceledDate": undefined,
  "canceledTxHash": undefined,
  "chainId": 11155111,
  "executedDate": undefined,
  "executedTxHash": undefined,
  "executionEtaDate": 2024-07-02T15:56:59.000Z,
  "expiredDate": 2024-07-16T15:56:59.000Z,
  "failedDate": undefined,
  "failedTxHash": undefined,
  "proposalActions": [],
  "proposalId": 1,
  "queuedDate": 2024-06-30T15:56:59.000Z,
  "queuedTxHash": "0x3f4f7a17f7ed78c0c3620e61391aeab8b0a22b2438c7c8b65396e3d52c617d1f",
  "remoteProposalId": 4,
  "state": 4,
}
`;

exports[`formatToRemoteProposal > returns pending remote proposal in the correct format 1`] = `
{
  "bridgedDate": undefined,
  "canceledDate": undefined,
  "canceledTxHash": undefined,
  "chainId": 11155111,
  "executedDate": 2024-07-09T10:19:23.000Z,
  "executedTxHash": "0x544c7a7eaa39193348b5907232f9cee66c8aa6f609200d03792289b40487d164",
  "executionEtaDate": 2024-07-02T15:56:59.000Z,
  "expiredDate": undefined,
  "failedDate": undefined,
  "failedTxHash": undefined,
  "proposalActions": [],
  "proposalId": 1,
  "queuedDate": 2024-06-30T15:56:59.000Z,
  "queuedTxHash": "0x3f4f7a17f7ed78c0c3620e61391aeab8b0a22b2438c7c8b65396e3d52c617d1f",
  "remoteProposalId": 4,
  "state": 0,
}
`;

exports[`formatToRemoteProposal > returns remote proposal as canceled when source proposal state is 2 in the correct format 1`] = `
{
  "bridgedDate": undefined,
  "canceledDate": 2024-03-14T12:01:40.000Z,
  "canceledTxHash": undefined,
  "chainId": 11155111,
  "executedDate": 2024-07-09T10:19:23.000Z,
  "executedTxHash": "0x544c7a7eaa39193348b5907232f9cee66c8aa6f609200d03792289b40487d164",
  "executionEtaDate": 2024-07-02T15:56:59.000Z,
  "expiredDate": undefined,
  "failedDate": undefined,
  "failedTxHash": undefined,
  "proposalActions": [],
  "proposalId": 1,
  "queuedDate": 2024-06-30T15:56:59.000Z,
  "queuedTxHash": "0x3f4f7a17f7ed78c0c3620e61391aeab8b0a22b2438c7c8b65396e3d52c617d1f",
  "remoteProposalId": 4,
  "state": 0,
}
`;

exports[`formatToRemoteProposal > returns remote proposal as canceled when source proposal state is 3 in the correct format 1`] = `
{
  "bridgedDate": undefined,
  "canceledDate": 2024-03-14T12:05:00.000Z,
  "canceledTxHash": undefined,
  "chainId": 11155111,
  "executedDate": 2024-07-09T10:19:23.000Z,
  "executedTxHash": "0x544c7a7eaa39193348b5907232f9cee66c8aa6f609200d03792289b40487d164",
  "executionEtaDate": 2024-07-02T15:56:59.000Z,
  "expiredDate": undefined,
  "failedDate": undefined,
  "failedTxHash": undefined,
  "proposalActions": [],
  "proposalId": 1,
  "queuedDate": 2024-06-30T15:56:59.000Z,
  "queuedTxHash": "0x3f4f7a17f7ed78c0c3620e61391aeab8b0a22b2438c7c8b65396e3d52c617d1f",
  "remoteProposalId": 4,
  "state": 0,
}
`;

exports[`formatToRemoteProposal > returns remote proposal as canceled when source proposal state is 6 in the correct format 1`] = `
{
  "bridgedDate": undefined,
  "canceledDate": 2024-03-14T12:03:20.000Z,
  "canceledTxHash": undefined,
  "chainId": 11155111,
  "executedDate": 2024-07-09T10:19:23.000Z,
  "executedTxHash": "0x544c7a7eaa39193348b5907232f9cee66c8aa6f609200d03792289b40487d164",
  "executionEtaDate": 2024-07-02T15:56:59.000Z,
  "expiredDate": undefined,
  "failedDate": undefined,
  "failedTxHash": undefined,
  "proposalActions": [],
  "proposalId": 1,
  "queuedDate": 2024-06-30T15:56:59.000Z,
  "queuedTxHash": "0x3f4f7a17f7ed78c0c3620e61391aeab8b0a22b2438c7c8b65396e3d52c617d1f",
  "remoteProposalId": 4,
  "state": 0,
}
`;

exports[`formatToRemoteProposal > returns withdrawn remote proposal in the correct format 1`] = `
{
  "bridgedDate": undefined,
  "canceledDate": 2022-06-29T10:43:23.000Z,
  "canceledTxHash": undefined,
  "chainId": 11155111,
  "executedDate": 2024-07-09T10:19:23.000Z,
  "executedTxHash": "0x544c7a7eaa39193348b5907232f9cee66c8aa6f609200d03792289b40487d164",
  "executionEtaDate": 2024-07-02T15:56:59.000Z,
  "expiredDate": undefined,
  "failedDate": undefined,
  "failedTxHash": undefined,
  "proposalActions": [],
  "proposalId": 1,
  "queuedDate": 2024-06-30T15:56:59.000Z,
  "queuedTxHash": "0x3f4f7a17f7ed78c0c3620e61391aeab8b0a22b2438c7c8b65396e3d52c617d1f",
  "remoteProposalId": 4,
  "state": 0,
}
`;
